src/parsing/parse.output
Terminals unused in grammar

    SQUOTE


Grammar

    0 $accept: top $end

    1 top: EOC_TOK
    2    | cmds EOC_TOK
    3    | cmds END
    4    | error EOC_TOK
    5    | error END

    6 cmds: cmd_top
    7     | cmd_top PIPE cmds

    8 cmd_top: cmd_content redir cmd_bg

    9 cmd_content: cmd
   10            | ECHO_TOK
   11            | ECHO_TOK cmd_arguments
   12            | EXPORT_TOK ID EQUALS string
   13            | CD_TOK
   14            | CD_TOK string
   15            | PWD_TOK
   16            | JOBS_TOK
   17            | EXIT_TOK
   18            | KILL_TOK NUM NUM

   19 redir: redir_inner
   20      | ε

   21 redir_inner: redir_mark string redir_inner
   22            | redir_mark string

   23 redir_mark: REDIRIN
   24           | REDIROUT
   25           | REDIROUTAPP

   26 cmd_bg: ε
   27       | BCKGRND

   28 cmd: first_string cmd_arguments
   29    | first_string

   30 cmd_arguments: string
   31              | string cmd_arguments

   32 string: first_string
   33       | special_string

   34 special_string: ECHO_TOK
   35               | EXPORT_TOK
   36               | CD_TOK
   37               | KILL_TOK
   38               | PWD_TOK
   39               | JOBS_TOK
   40               | EXIT_TOK

   41 first_string: STR
   42             | SIM_STR
   43             | NUM
   44             | ID


Terminals, with rules where they appear

    $end (0) 0
    error (256) 4 5
    PIPE (258) 7
    BCKGRND (259) 27
    SQUOTE (260)
    EQUALS (261) 12
    REDIRIN (262) 23
    REDIROUT (263) 24
    REDIROUTAPP (264) 25
    END (265) 3 5
    ECHO_TOK (266) 10 11 34
    EXPORT_TOK (267) 12 35
    CD_TOK (268) 13 14 36
    PWD_TOK (269) 15 38
    JOBS_TOK (270) 16 39
    KILL_TOK (271) 18 37
    EOC_TOK (272) 1 2 4
    STR <str> (273) 41
    SIM_STR <str> (274) 42
    ID <str> (275) 12 44
    NUM <str> (276) 18 43
    EXIT_TOK <str> (277) 17 40


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    top <cmd_arr> (24)
        on left: 1 2 3 4 5
        on right: 0
    cmds <cmd_list> (25)
        on left: 6 7
        on right: 2 3 7
    cmd_top <holder> (26)
        on left: 8
        on right: 6 7
    cmd_content <cmd> (27)
        on left: 9 10 11 12 13 14 15 16 17 18
        on right: 8
    redir <redirect> (28)
        on left: 19 20
        on right: 8
    redir_inner <redirect> (29)
        on left: 21 22
        on right: 19 21
    redir_mark <integer> (30)
        on left: 23 24 25
        on right: 21 22
    cmd_bg <integer> (31)
        on left: 26 27
        on right: 8
    cmd <cmd_strs> (32)
        on left: 28 29
        on right: 9
    cmd_arguments <cmd_strs> (33)
        on left: 30 31
        on right: 11 28 31
    string <str> (34)
        on left: 32 33
        on right: 12 14 21 22 30 31
    special_string <str> (35)
        on left: 34 35 36 37 38 39 40
        on right: 33
    first_string <str> (36)
        on left: 41 42 43 44
        on right: 28 29 32


State 0

    0 $accept: • top $end

    error       shift, and go to state 1
    ECHO_TOK    shift, and go to state 2
    EXPORT_TOK  shift, and go to state 3
    CD_TOK      shift, and go to state 4
    PWD_TOK     shift, and go to state 5
    JOBS_TOK    shift, and go to state 6
    KILL_TOK    shift, and go to state 7
    EOC_TOK     shift, and go to state 8
    STR         shift, and go to state 9
    SIM_STR     shift, and go to state 10
    ID          shift, and go to state 11
    NUM         shift, and go to state 12
    EXIT_TOK    shift, and go to state 13

    top           go to state 14
    cmds          go to state 15
    cmd_top       go to state 16
    cmd_content   go to state 17
    cmd           go to state 18
    first_string  go to state 19


State 1

    4 top: error • EOC_TOK
    5    | error • END

    END      shift, and go to state 20
    EOC_TOK  shift, and go to state 21


State 2

   10 cmd_content: ECHO_TOK •
   11            | ECHO_TOK • cmd_arguments

    ECHO_TOK    shift, and go to state 22
    EXPORT_TOK  shift, and go to state 23
    CD_TOK      shift, and go to state 24
    PWD_TOK     shift, and go to state 25
    JOBS_TOK    shift, and go to state 26
    KILL_TOK    shift, and go to state 27
    STR         shift, and go to state 9
    SIM_STR     shift, and go to state 10
    ID          shift, and go to state 11
    NUM         shift, and go to state 12
    EXIT_TOK    shift, and go to state 28

    $default  reduce using rule 10 (cmd_content)

    cmd_arguments   go to state 29
    string          go to state 30
    special_string  go to state 31
    first_string    go to state 32


State 3

   12 cmd_content: EXPORT_TOK • ID EQUALS string

    ID  shift, and go to state 33


State 4

   13 cmd_content: CD_TOK •
   14            | CD_TOK • string

    ECHO_TOK    shift, and go to state 22
    EXPORT_TOK  shift, and go to state 23
    CD_TOK      shift, and go to state 24
    PWD_TOK     shift, and go to state 25
    JOBS_TOK    shift, and go to state 26
    KILL_TOK    shift, and go to state 27
    STR         shift, and go to state 9
    SIM_STR     shift, and go to state 10
    ID          shift, and go to state 11
    NUM         shift, and go to state 12
    EXIT_TOK    shift, and go to state 28

    $default  reduce using rule 13 (cmd_content)

    string          go to state 34
    special_string  go to state 31
    first_string    go to state 32


State 5

   15 cmd_content: PWD_TOK •

    $default  reduce using rule 15 (cmd_content)


State 6

   16 cmd_content: JOBS_TOK •

    $default  reduce using rule 16 (cmd_content)


State 7

   18 cmd_content: KILL_TOK • NUM NUM

    NUM  shift, and go to state 35


State 8

    1 top: EOC_TOK •

    $default  reduce using rule 1 (top)


State 9

   41 first_string: STR •

    $default  reduce using rule 41 (first_string)


State 10

   42 first_string: SIM_STR •

    $default  reduce using rule 42 (first_string)


State 11

   44 first_string: ID •

    $default  reduce using rule 44 (first_string)


State 12

   43 first_string: NUM •

    $default  reduce using rule 43 (first_string)


State 13

   17 cmd_content: EXIT_TOK •

    $default  reduce using rule 17 (cmd_content)


State 14

    0 $accept: top • $end

    $end  shift, and go to state 36


State 15

    2 top: cmds • EOC_TOK
    3    | cmds • END

    END      shift, and go to state 37
    EOC_TOK  shift, and go to state 38


State 16

    6 cmds: cmd_top •
    7     | cmd_top • PIPE cmds

    PIPE  shift, and go to state 39

    $default  reduce using rule 6 (cmds)


State 17

    8 cmd_top: cmd_content • redir cmd_bg

    REDIRIN      shift, and go to state 40
    REDIROUT     shift, and go to state 41
    REDIROUTAPP  shift, and go to state 42

    $default  reduce using rule 20 (redir)

    redir        go to state 43
    redir_inner  go to state 44
    redir_mark   go to state 45


State 18

    9 cmd_content: cmd •

    $default  reduce using rule 9 (cmd_content)


State 19

   28 cmd: first_string • cmd_arguments
   29    | first_string •

    ECHO_TOK    shift, and go to state 22
    EXPORT_TOK  shift, and go to state 23
    CD_TOK      shift, and go to state 24
    PWD_TOK     shift, and go to state 25
    JOBS_TOK    shift, and go to state 26
    KILL_TOK    shift, and go to state 27
    STR         shift, and go to state 9
    SIM_STR     shift, and go to state 10
    ID          shift, and go to state 11
    NUM         shift, and go to state 12
    EXIT_TOK    shift, and go to state 28

    $default  reduce using rule 29 (cmd)

    cmd_arguments   go to state 46
    string          go to state 30
    special_string  go to state 31
    first_string    go to state 32


State 20

    5 top: error END •

    $default  reduce using rule 5 (top)


State 21

    4 top: error EOC_TOK •

    $default  reduce using rule 4 (top)


State 22

   34 special_string: ECHO_TOK •

    $default  reduce using rule 34 (special_string)


State 23

   35 special_string: EXPORT_TOK •

    $default  reduce using rule 35 (special_string)


State 24

   36 special_string: CD_TOK •

    $default  reduce using rule 36 (special_string)


State 25

   38 special_string: PWD_TOK •

    $default  reduce using rule 38 (special_string)


State 26

   39 special_string: JOBS_TOK •

    $default  reduce using rule 39 (special_string)


State 27

   37 special_string: KILL_TOK •

    $default  reduce using rule 37 (special_string)


State 28

   40 special_string: EXIT_TOK •

    $default  reduce using rule 40 (special_string)


State 29

   11 cmd_content: ECHO_TOK cmd_arguments •

    $default  reduce using rule 11 (cmd_content)


State 30

   30 cmd_arguments: string •
   31              | string • cmd_arguments

    ECHO_TOK    shift, and go to state 22
    EXPORT_TOK  shift, and go to state 23
    CD_TOK      shift, and go to state 24
    PWD_TOK     shift, and go to state 25
    JOBS_TOK    shift, and go to state 26
    KILL_TOK    shift, and go to state 27
    STR         shift, and go to state 9
    SIM_STR     shift, and go to state 10
    ID          shift, and go to state 11
    NUM         shift, and go to state 12
    EXIT_TOK    shift, and go to state 28

    $default  reduce using rule 30 (cmd_arguments)

    cmd_arguments   go to state 47
    string          go to state 30
    special_string  go to state 31
    first_string    go to state 32


State 31

   33 string: special_string •

    $default  reduce using rule 33 (string)


State 32

   32 string: first_string •

    $default  reduce using rule 32 (string)


State 33

   12 cmd_content: EXPORT_TOK ID • EQUALS string

    EQUALS  shift, and go to state 48


State 34

   14 cmd_content: CD_TOK string •

    $default  reduce using rule 14 (cmd_content)


State 35

   18 cmd_content: KILL_TOK NUM • NUM

    NUM  shift, and go to state 49


State 36

    0 $accept: top $end •

    $default  accept


State 37

    3 top: cmds END •

    $default  reduce using rule 3 (top)


State 38

    2 top: cmds EOC_TOK •

    $default  reduce using rule 2 (top)


State 39

    7 cmds: cmd_top PIPE • cmds

    ECHO_TOK    shift, and go to state 2
    EXPORT_TOK  shift, and go to state 3
    CD_TOK      shift, and go to state 4
    PWD_TOK     shift, and go to state 5
    JOBS_TOK    shift, and go to state 6
    KILL_TOK    shift, and go to state 7
    STR         shift, and go to state 9
    SIM_STR     shift, and go to state 10
    ID          shift, and go to state 11
    NUM         shift, and go to state 12
    EXIT_TOK    shift, and go to state 13

    cmds          go to state 50
    cmd_top       go to state 16
    cmd_content   go to state 17
    cmd           go to state 18
    first_string  go to state 19


State 40

   23 redir_mark: REDIRIN •

    $default  reduce using rule 23 (redir_mark)


State 41

   24 redir_mark: REDIROUT •

    $default  reduce using rule 24 (redir_mark)


State 42

   25 redir_mark: REDIROUTAPP •

    $default  reduce using rule 25 (redir_mark)


State 43

    8 cmd_top: cmd_content redir • cmd_bg

    BCKGRND  shift, and go to state 51

    $default  reduce using rule 26 (cmd_bg)

    cmd_bg  go to state 52


State 44

   19 redir: redir_inner •

    $default  reduce using rule 19 (redir)


State 45

   21 redir_inner: redir_mark • string redir_inner
   22            | redir_mark • string

    ECHO_TOK    shift, and go to state 22
    EXPORT_TOK  shift, and go to state 23
    CD_TOK      shift, and go to state 24
    PWD_TOK     shift, and go to state 25
    JOBS_TOK    shift, and go to state 26
    KILL_TOK    shift, and go to state 27
    STR         shift, and go to state 9
    SIM_STR     shift, and go to state 10
    ID          shift, and go to state 11
    NUM         shift, and go to state 12
    EXIT_TOK    shift, and go to state 28

    string          go to state 53
    special_string  go to state 31
    first_string    go to state 32


State 46

   28 cmd: first_string cmd_arguments •

    $default  reduce using rule 28 (cmd)


State 47

   31 cmd_arguments: string cmd_arguments •

    $default  reduce using rule 31 (cmd_arguments)


State 48

   12 cmd_content: EXPORT_TOK ID EQUALS • string

    ECHO_TOK    shift, and go to state 22
    EXPORT_TOK  shift, and go to state 23
    CD_TOK      shift, and go to state 24
    PWD_TOK     shift, and go to state 25
    JOBS_TOK    shift, and go to state 26
    KILL_TOK    shift, and go to state 27
    STR         shift, and go to state 9
    SIM_STR     shift, and go to state 10
    ID          shift, and go to state 11
    NUM         shift, and go to state 12
    EXIT_TOK    shift, and go to state 28

    string          go to state 54
    special_string  go to state 31
    first_string    go to state 32


State 49

   18 cmd_content: KILL_TOK NUM NUM •

    $default  reduce using rule 18 (cmd_content)


State 50

    7 cmds: cmd_top PIPE cmds •

    $default  reduce using rule 7 (cmds)


State 51

   27 cmd_bg: BCKGRND •

    $default  reduce using rule 27 (cmd_bg)


State 52

    8 cmd_top: cmd_content redir cmd_bg •

    $default  reduce using rule 8 (cmd_top)


State 53

   21 redir_inner: redir_mark string • redir_inner
   22            | redir_mark string •

    REDIRIN      shift, and go to state 40
    REDIROUT     shift, and go to state 41
    REDIROUTAPP  shift, and go to state 42

    $default  reduce using rule 22 (redir_inner)

    redir_inner  go to state 55
    redir_mark   go to state 45


State 54

   12 cmd_content: EXPORT_TOK ID EQUALS string •

    $default  reduce using rule 12 (cmd_content)


State 55

   21 redir_inner: redir_mark string redir_inner •

    $default  reduce using rule 21 (redir_inner)
